Trying to fix overflow-y

--- a/ghufran/src/index.css
+++ b/ghufran/src/index.css
@@ -102,7 +102,7 @@ code {
 /* SUBJECTS */
 #subjects-container {
   min-height: 40vh;
-  width: 100%;
+  width: 100vw;
   background-color: #ffffff;
   display: flex;
   flex-direction: column;
@@ -151,7 +151,7 @@ code {
 
 #proof-container {
   min-height: 45vh;
-  width: 100%;
+  width: 100vw;
   background-color: #67688e;
   display: flex;
   flex-direction: row;
@@ -209,7 +209,7 @@ code {
 @media only screen and (max-width: 640px) {
   #proof-container {
     min-height: 45vh;
-    width: 100%;
+    width: 100vw;
     background-color: #67688e;
     display: flex;
     flex-direction: column;
@@ -222,7 +222,24 @@ code {
     justify-content: center;
     justify-self: center;
     align-self: center;
-    width: 100%;
+    width: 100vw;
+    padding: 0;
+    word-wrap: break-word;
+  }
+
+  #proof-container #content1 h1 {
+    color: #e3b379;
+    text-align: left;
+    font-size: 2.6rem;
+    width: 100vw;
+  }
+
+  #proof-container #content1 h2 {
+    color: #ffffff;
+    text-align: left;
+    font-size: 1.4rem;
+    width: 100vw;
+    word-wrap: break-word;
   }
 
   #proof-container #content2 .image {
@@ -323,6 +340,12 @@ code {
     justify-content: center;
     justify-self: center;
     align-self: center;
+    padding: 0;
+    word-wrap: break-word;
+  }
+
+  #childsafety-container #content3, #content4 {
+    padding: 0;
   }
 
   #childsafety-container #content3 h1 {
@@ -420,6 +443,7 @@ code {
 
   #pricing-container #content2 {
     justify-content: center;
+    padding: 0;
   }
 }
 
@@ -476,6 +500,7 @@ code {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding: 0;
   }
 
   #footer-container #content2 .button {
